styles.css
body {
  position: relative;
}

.menu-backdrop {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.75);
  z-index: 9999999;
  pointer-events: none;
  opacity: 0;
  transition: all 0.3s;
  box-sizing: border-box;
}

.menu-backdrop.active {
  pointer-events: all;
  opacity: 1;
}

.menu-backdrop.active > .menu {
  transform: translateY(0px);
}

.menu-backdrop > .menu {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  pointer-events: all;
  flex: 1;
  color: #fff;
  background-color: rgba(0, 100, 160);
  height: 35px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  transition: all 0.3s;
  transform: translateY(-35px);
  user-select: none;
  cursor: default;
  font-family: Arial, Helvetica, sans-serif;
  line-height: 1.5;
  font-size: 14px;
  padding: 0 0px;
  box-sizing: border-box;
}

.menu-backdrop > .menu > * {
  padding: 5px 10px;
  font-weight: 400;
  margin: 0 5px;
	border-radius: 2px;
}

.menu-backdrop > .menu > .menu-header {
  font-family: Arial, Helvetica, sans-serif;
  background-color: rgba(255, 255, 255, .2);
  height: 100%;
  box-sizing: border-box;
  margin-left: 0;
	border-radius: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  font-size: 15px;
  padding: 5px 15px;
}

.menu-backdrop > .menu > .menu-header + * {
  margin-left: 0px;
}

.menu-backdrop > .menu > .gap {
  padding: 0;
  margin: 0;
  font-size: 0;
  line-height: 0;
  flex: 1;
  content: '';
}

.menu-backdrop > .menu > .menu-item {
  transition: all 0.15s;
  cursor: pointer;
  position: relative;
}

.menu-backdrop > .menu > *:not(:last-child):after {
  content: '';
  position: absolute;
  left: calc(100% + 5px);
  top: 5px;
  bottom: 5px;
  width: 1px;
  background-color: rgba(255, 255, 255, .15);
}

.menu-backdrop > .menu > .menu-item:hover {
  background-color: rgba(0, 0, 0, .15);
}

.menu-backdrop > .menu > .menu-item:active, .menu-backdrop > .menu > .menu-item.active {
  background-color: rgba(255, 255, 255, .9);
  color: #333;
}

.menu-backdrop.left > .menu {
  top: 0;
  left: 0;
  right: unset;
  bottom: 0;
  padding: 0;
  min-width: 300px;
  min-height: 100%;
  flex-direction: column;
  align-items: stretch;
  transform: translateX(-300px);
}

.menu-backdrop.left.active > .menu {
  transform: translateX(0px);
}

.menu-backdrop.left > .menu > * {
  margin: 3px 0;
}

.menu-backdrop.left > .menu > .menu-header {
  height: unset;
  margin: 0;
}

.menu-backdrop.left > .menu > *:not(:last-child):after {
  bottom: unset;
  top: calc(100% + 3px);
  left: 5px;
  right: 5px;
  width: unset;
  height: 1px;
}



.dropdown {
  position: relative;
  background-color: rgba(0, 0, 0, 0);
  transition: all 0.3s;
  cursor: default !important;
  box-sizing: border-box;
}

.dropdown > .dropdown-content {
  background-color: #fff;
  color: #333;
	border-radius: 2px;
  position: absolute;
  top: calc(100% + 5px);
  left: 0;
	display: flex;
	flex-direction: column;
  transition: all 0.3s;
  opacity: 0;
  pointer-events: none;
  min-width: 250px;
}

.dropdown-right > .dropdown-content {
  top: 0;
  left: calc(100% + 5px);
}

.dropdown-left > .dropdown-content {
  top: 0;
  left: unset;
  right: calc(100% + 5px);
}

.dropdown-bottom-left > .dropdown-content {
  top: calc(100% + 5px);
  left: unset;
  right: 0;
}

.dropdown:hover, .dropdown.active {
  background-color: rgba(0, 0, 0, .15);
}

.dropdown.active > .dropdown-content {
  pointer-events: all;
  opacity: 1;
}

.dropdown > .dropdown-content > .item {
  padding: 5px 10px;
  white-space: nowrap;
  cursor: pointer;
  font-size: 13px;
  background-color: rgba(0, 100, 160, 0);
  transition: all 0.15s;
}

.dropdown > .dropdown-content > .item:last-child {
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

.dropdown > .dropdown-content > .item:first-child {
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.dropdown > .dropdown-content > .item:not(:last-child) {
  border-bottom: solid 1px rgba(0, 0, 0, .1);
}

.dropdown > .dropdown-content > .item:hover {
  background-color: rgba(0, 100, 160, .15);
}

.dropdown > .dropdown-content > .item:active, .dropdown > .dropdown-content > .item.active {
  background-color: rgba(0, 100, 160, .9);
  color: #fff;
}



.row-left-right {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
}

.row-left-right > *:first-child {
  flex: 1;
}

